<resources>
    <string name="app_name">PFA</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_record">Record</string>
    <string name="title_target">Target</string>
    <string name="title_report">Report</string>
    <string name="title_profile">Profile</string>
    <string name="title_guide">Quick Guide</string>
    <string name="title_category">Category Management</string>
    <string name="guide_image_description">Demonstration Image</string>
    <string name="expenseCat">FOOD</string>
    <string name="expenseAmount">1000</string>
    <string name="transportCat">Transportation</string>
    <string name="transportAmount">25</string>
<<<<<<< Updated upstream
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="guide_title">Quick Guide</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus aliquet enim a neque suscipit maximus. </string>
    <string name="guide_intro_1">Introduction 1</string>
    <string name="guide_intro_2">Introduction 2</string>
    <string name="guide_intro_3">Introduction 3</string>
    <string name="guide_intro_4">Introduction 4</string>
    <string name="guide_intro_5">Introduction 5</string>
    <string name="guide_intro_6">Introduction 6</string>
=======
    <string name="buttonProfile">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="guide_title">Quick Guide</string>

    <string name="add_title">add Income / expense</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus aliquet enim a neque suscipit maximus. Aenean erat nulla, fringilla sed nunc eu, laoreet imperdiet risus. Donec a mi nec ante fermentum convallis vel sed libero. Suspendisse potenti. Curabitur accumsan rutrum nibh sit amet lobortis. In ultricies et nibh eget gravida. Curabitur lobortis rhoncus lacus at fringilla. In ultrices arcu at tortor dictum suscipit. Aenean vel ligula nulla. Proin sit amet dapibus metus. Quisque eu volutpat mi. Nullam id quam et quam vestibulum commodo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce non tincidunt leo, ac ullamcorper libero.</string>
    <string-array name="guide_intro">
        <item>Introduction 1</item>
        <item>Introduction 2</item>
        <item>Introduction 3</item>
        <item>Introduction 4</item>
        <item>Introduction 5</item>
        <item>Introduction 6</item>
    </string-array>
>>>>>>> Stashed changes
</resources>