<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="80dp"
            android:paddingBottom="10dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/totalExpense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"
                android:text="Total Expense :"
                tools:ignore="MissingConstraints"
              />

            <TextView
                android:id="@+id/totalIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Income :"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"
                tools:ignore="MissingConstraints"
            />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"

                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorLight"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:id="@+id/food"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/food"
                        android:src="@drawable/food"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>

                    <TextView
                        android:id="@+id/expenseCat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="80dp"
                        android:layout_marginRight="80dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/expenseCat"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/food"
                        app:layout_constraintTop_toTopOf="@id/food" />

                    <TextView
                        android:id="@+id/expenseAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/expenseAmount"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/expenseCat"
                        app:layout_constraintStart_toStartOf="@id/expenseCat"
                        app:layout_constraintTop_toBottomOf="@id/expenseCat"
                        tools:ignore="MissingConstraints" />


                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="0dp"
                        android:src="@drawable/ic_home_black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/colorLight"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:id="@+id/transport"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/transport"
                            android:src="@drawable/transport"

                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                        </ImageView>

                        <TextView
                            android:id="@+id/transportCat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginEnd="80dp"
                            android:layout_marginRight="80dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/transportCat"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/transport"
                            app:layout_constraintTop_toTopOf="@id/transport" />

                        <TextView
                            android:id="@+id/transportAmount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/transportAmount"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/transportCat"
                            app:layout_constraintStart_toStartOf="@id/transportCat"
                            app:layout_constraintTop_toBottomOf="@id/transportCat"
                            tools:ignore="MissingConstraints" />


                        <ImageButton
                            android:layout_width="50dp"
                            android:layout_height="0dp"
                            android:src="@drawable/ic_home_black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>



            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>



